# ai-mol

./: .gitignore  CLAUDE.md  README.md  claude_socket_plugin.py  pymol_connection.py  pymol_mcp_server.py  pymol_view.py  pyproject.toml
.claude-plugin/: marketplace.json
.claude/skills/miscellaneous/: SKILL.md
.claude/skills/pymol-connect/: SKILL.md
.claude/skills/pymol-setup/: SKILL.md
claude-plugin/: CLAUDE.md
claude-plugin/hooks/: hooks.json
claude-plugin/skills/pymol/: SKILL.md
claude-plugin/skills/pymol-setup/: SKILL.md
docs/: COOKBOOK.md  learning-log.md
docs/plans/: 2026-01-28-visual-feedback-exploration.md  2026-02-01-distribution-design.md  2026-02-05-reliable-onboarding-design.md
docs/progress/: curriculum-tracker.md
pymol-mcp-socket-plugin/: __init__.py
src/claudemol/: __init__.py  cli.py
